--- a/refer-mysql/index.html
+++ b/refer-mysql/index.html
@@ -303,10 +303,113 @@ Query OK, 0 rows affected (0.04 sec)
                     <h2 id="intro6" class="page-header">테이블 데이터</h2>
 
                     <h3 id="intro6-1" class="pt30">데이터 입력하기</h3>
+                    <div class="bs-callout bs-callout-info">
+                        INSERT INTO 테이블 이름(필드명) VALUES(데이터)
+                    </div>
+<pre class="language-js"><code>
+    INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('kws7902@naver.com', 'wooseok', '1234', '1998-08-15', '333')
+</code></pre>
+
                     <h3 id="intro6-2" class="pt30">데이터 불러오기</h3>
+                    <div class="bs-callout bs-callout-info">
+                        SELECT * FROM 테이블명
+                    </div>
+<pre class="language-js"><code> SELECT * FROM member;
+    +------------+-------------------+---------+---------+------------+---------+
+    | myMemberID | youEmail          | youName | youPass | youBirth   | regTime |
+    +------------+-------------------+---------+---------+------------+---------+
+    |          1 | kws7902@naver.com | wooseok | 1234    | 1998-08-15 |     333 |
+    +------------+-------------------+---------+---------+------------+---------+
+    1 row in set (0.00 sec)
+</code></pre>
+                <h4>memberID가 6번인 경우</h4>
+<pre class="language-js"><code>mysql> SELECT * FROM member WHERE myMemberID = 6;
+    +------------+--------------------+---------+---------+------------+---------+
+    | myMemberID | youEmail           | youName | youPass | youBirth   | regTime |
+    +------------+--------------------+---------+---------+------------+---------+
+    |          6 | wow2002r@naver.com | Ripia   | 1234    | 1994-11-04 |     333 |
+    +------------+--------------------+---------+---------+------------+---------+
+    1 row in set (0.00 sec)
+</code></pre>
+                <h4>email 중에 naver텍스트를 포함하는 경우</h4>
+<pre class="language-js"><code>mysql> SELECT * FROM member WHERE youEmail LIKE '%naver%';
+    +------------+--------------------+---------+---------+------------+---------+
+    | myMemberID | youEmail           | youName | youPass | youBirth   | regTime |
+    +------------+--------------------+---------+---------+------------+---------+
+    |          1 | kws7902@naver.com  | wooseok | 1234    | 1998-08-15 |     333 |
+    |          5 | guswjd8694@naver   | dallae  | 1234    | 2016-05-25 |     333 |
+    |          6 | wow2002r@naver.com | Ripia   | 1234    | 1994-11-04 |     333 |
+    +------------+--------------------+---------+---------+------------+---------+
+    3 rows in set (0.00 sec)
+</code></pre>
+                <h4>email 중에 kws7902텍스트를 시작하는 경우</h4>
+<pre class="language-js"><code>mysql> SELECT * FROM member WHERE youEmail LIKE 'kws7902%';  
+    +------------+-------------------+---------+---------+------------+---------+
+    | myMemberID | youEmail          | youName | youPass | youBirth   | regTime |
+    +------------+-------------------+---------+---------+------------+---------+
+    |          1 | kws7902@naver.com | wooseok | 1234    | 1998-08-15 |     333 |
+    +------------+-------------------+---------+---------+------------+---------+
+    1 row in set (0.00 sec)            
+</code></pre>
+                <h4>email 중에 com텍스트로 끝나는 경우</h4>
+<pre class="language-js"><code>mysql> SELECT * FROM member WHERE youEmail LIKE '%com';  
+    +------------+----------------------+-----------+---------+------------+---------+
+    | myMemberID | youEmail             | youName   | youPass | youBirth   | regTime |
+    +------------+----------------------+-----------+---------+------------+---------+
+    |          1 | kws7902@naver.com    | wooseok   | 1234    | 1998-08-15 |     333 |
+    |          2 | younyc0413@gmail.com | youn      | 0413    | 1992-04-13 |     333 |
+    |          4 | seonyoung@gmail.com  | SEONYOUNG | 1234    | 1997-04-03 |     111 |
+    |          6 | wow2002r@naver.com   | Ripia     | 1234    | 1994-11-04 |     333 |
+    +------------+----------------------+-----------+---------+------------+---------+
+    4 rows in set (0.00 sec)
+</code></pre>
+                <h4>멤버아이디 조건 검색</h4>
+<pre class="language-js"><code>mysql> SELECT * FROM member WHERE myMemberID >= 2 AND myMemberID <=5;  
+    +------------+----------------------+-----------+---------+------------+---------+
+    | myMemberID | youEmail             | youName   | youPass | youBirth   | regTime |
+    +------------+----------------------+-----------+---------+------------+---------+
+    |          2 | younyc0413@gmail.com | youn      | 0413    | 1992-04-13 |     333 |
+    |          3 | billiejeong08@gmail  | billie    | 1234    | 1995-08-12 |     333 |
+    |          4 | seonyoung@gmail.com  | SEONYOUNG | 1234    | 1997-04-03 |     111 |
+    |          5 | guswjd8694@naver     | dallae    | 1234    | 2016-05-25 |     333 |
+    +------------+----------------------+-----------+---------+------------+---------+
+    4 rows in set (0.00 sec)
+</code></pre>
+                <h4>멤버아이디 조건 검색</h4>
+<pre class="language-js"><code>mysql> SELECT * FROM member WHERE myMemberID >= 2 AND myMemberID <=5;  
+    +------------+----------------------+-----------+---------+------------+---------+
+    | myMemberID | youEmail             | youName   | youPass | youBirth   | regTime |
+    +------------+----------------------+-----------+---------+------------+---------+
+    |          2 | younyc0413@gmail.com | youn      | 0413    | 1992-04-13 |     333 |
+    |          3 | billiejeong08@gmail  | billie    | 1234    | 1995-08-12 |     333 |
+    |          4 | seonyoung@gmail.com  | SEONYOUNG | 1234    | 1997-04-03 |     111 |
+    |          5 | guswjd8694@naver     | dallae    | 1234    | 2016-05-25 |     333 |
+    +------------+----------------------+-----------+---------+------------+---------+
+    4 rows in set (0.00 sec)
+</code></pre>
+
+
                     <h3 id="intro6-3" class="pt30">데이터 수정하기</h3>
+                    <div class="bs-callout bs-callout-info">
+                        UPDATE 테이블 SET 필드명 조건
+                    </div>
+                    <h4>회원 아이디 1번인 이름을 변경</h4>
+<pre class="language-js"><code>UPDATE member SET youName = "김우석"WHERE myMemberID =1; 
+</code></pre>
+                    <h4 class="pt10">모든 회원 비밀번호를 '1234' 변경</h4>
+<pre class="language-js"><code>UPDATE member SET youPass = "1234"; 
+</code></pre>
+
                     <h3 id="intro6-4" class="pt30">데이터 삭제하기</h3>
-             
+                    <div class="bs-callout bs-callout-info">
+                        DELETE FROM 테이블명 조건
+                    </div>
+                    <h4>회원 아이디 3번 레코드 삭제</h4>
+<pre class="language-js"><code>DELETE FROM member WHERE myMemberID = 3;
+</code></pre>
+                    <h4 class="pt10">회원 아이디 4,5,6번 레코드 삭제</h4>
+<pre class="language-js"><code>DELETE FROM member WHERE myMemberID IN(4,5,6);
+</code></pre>
                 </div>
                 <!-- //Intro6 -->
 
