--- a/site/test02.html
+++ b/site/test02.html
@@ -1,304 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test02</title>
-    <style>
-        #header {
-            width: 100%;
-            height: 70px;
-            border-bottom: 1px solid #eee;
-        }
-
-        .header-container {
-            position: relative;
-            width: 96%;
-            margin: 0 auto;
-        }
-
-        .header-three {
-            text-align: center;
-        }
-
-        .header-three h1 {
-            font-family: 'S-CoreDream';
-            font-weight: 800;
-            position: absolute;
-            text-align: left;
-            line-height: 17px;
-            left: 20.5%;
-            top: 27%;
-        }
-
-        .header-three h1 a {
-            font-size: 16px;
-            color: #eee;
-        }
-
-        .header-three .tap li {
-            display: inline;
-        }
-
-        .header-three .tap li a {
-            font-family: 'NanumSquare';
-            padding: 0 27px;
-            color: #eee;
-            font-size: 17px;
-            line-height: 100px;
-        }
-
-        .header-three .login {
-            position: absolute;
-            right: 20.5%;
-            top: 0;
-        }
-
-        .header-three .login a {
-            font-family: 'NanumSquare';
-            line-height: 100px;
-            border: 1px solid #eee;
-            padding: 8px 13px;
-            border-radius: 30px;
-            margin-left: 10px;
-            color: #eee;
-        }
-
-        .cardType {
-            flex-wrap: wrap;
-            justify-content: center;
-            padding: 150px 0;
-        }
-
-        .cardType01 {
-            display: inline;
-        }
-
-        .cardType01 h2 {
-            font-family: 'NanumSquare';
-            color : #6d8bff;
-            font-size: 50px;
-            margin-top: 80px;
-            font-weight: 800;
-        }
-
-        .card01 {
-            font-family: 'NanumSquare';
-            margin-top: 50px;
-            border-radius: 20px;
-            width: 496px;
-            height: 870px;
-            background-color: #2F3033;
-            overflow: hidden;
-        }
-
-        .cardType01 .card01 .title{
-            color: #fff;
-            font-size: 20px;
-            padding-left: 40px;
-            margin-top: 20px;
-        }
-
-        .cardType01 .card01 .main {
-            font-size: 30px;
-            font-weight: 700;
-            color: #fff;
-            display: block;
-            padding-left: 40px;
-            margin-top: 10px;
-        }
-        .cardType01 .card01 .more {
-            color: #fff;
-            font-size: 20px;
-            padding-left: 40px;
-            margin-top: 30px;
-        }
-
-
-        .cardType01 .card01 .img img {
-            width: 496px;
-            height: 593px;
-            margin-top: 110px;
-            transform : scale(1);
-            transition: transform 0.4s;
-        }
-
-        .cardType01 .card01 .img:hover img{
-            transform : scale(1.1);
-        }
-
-        .right {
-            display: inline-block;
-        }
-
-
-        .card02 {
-            font-family: 'NanumSquare';
-            margin-top: 50px;
-            border-radius: 20px;
-            width: 496px;
-            height: 570px;
-            background-color: #2F3033;
-        }
-     
-
-        .card02 .title{
-            color: #fff;
-            font-size: 20px;
-        }
-
-        .card02 .main {
-            font-size: 30px;
-            font-weight: 700;
-            color: #fff;
-            display: block;
-        }
-        .card02 .more {
-            color: #fff;
-            font-size: 20px;
-        }
-
-
-        .card02 .img img {
-            width: 496px;
-            height: 294px;
-            margin-top: 125px;
-            transform : scale(1);
-            transition: transform 0.4s;
-        }
-
-        .card02 .img:hover img{
-            transform : scale(1.1);
-        }
-
-        .card03 {
-            font-family: 'NanumSquare';
-            margin-top: 50px;
-            border-radius: 20px;
-            width: 496px;
-            height: 570px;
-            background-color: #2F3033;
-            position: absolute;
-        }
-
-        .card03 .title{
-            color: #fff;
-            font-size: 20px;
-        }
-
-        .card03 .main {
-            font-size: 30px;
-            font-weight: 700;
-            color: #fff;
-            display: block;
-        }
-        .card03 .more {
-            color: #fff;
-            font-size: 20px;
-        }
-
-        .card03 .img img {
-            width: 496px;
-            height: 294px;
-            margin-top: 125px;
-            transform : scale(1);
-            transition: transform 0.4s;
-        }
-
-        .card03 .img:hover img{
-            transform : scale(1.1);
-        }
-
-    </style>
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/test.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
-
-    <!-- swiper CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+    <title>네이버 인플루언서 센터</title>
 </head>
-
 <body>
-    <header class="header">
-        <div class="header-container">
-            <div class="header-three">
-                <h1>
-                    <a href="#c">NAVER<br> INFLUCENCER CENTER</a>
-                </h1>
-                <nav class="tap">
-                    <ul>
-                        <li><a href="#c">인플루언서 안내</a></li>
-                        <li><a href="#c">광고 수익 혜택</a></li>
-                        <li><a href="#c">성장 지원 프로그램</a></li>
-                        <li><a href="#c">브랜드커넥트</a></li>
-                        <li><a href="#c">공지</a></li>
-                    </ul>
-                </nav>
-                <div class="login">
-                    <a href="#c">인플루언서로 로그인</a>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <section class="cardType">
-        <div class="container">
-            <div class="cardType01">
-                <h2>인플루언서에게 <br> 제공되는<br> 광고수익과 혜택</h2>
-                <div class="card-wrap">
-                    <div class="card01">
-                        <a href="#">
-                            <span class="title">인플루언서 홈</span>
-                            <strong class="main">취향을 자유롭게 표현하는 <br> 나만의 홈페이지</strong>
-                            <span class="more">자세히 알아보기</span>
-                        </a>
-                        <div class="img">
-                            <img src="img/t1.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <article class="right">
-        <div class="card-wrap">
-            <div class="card02">
-                <a href="#">
-                    <span class="title">인플루언서 홈</span>
-                    <strong class="main">취향을 자유롭게 표현하는 <br> 나만의 홈페이지</strong>
-                    <span class="more">자세히 알아보기</span>
-                </a>
-                <div class="img">
-                    <img src="img/t2.png" alt="">
-                </div>
-            </div>
-        </div>
-        <div class="card-wrap">
-            <div class="card03">
-                <a href="#">
-                    <span class="title">인플루언서 홈</span>
-                    <strong class="main">취향을 자유롭게 표현하는 <br> 나만의 홈페이지</strong>
-                    <span class="more">자세히 알아보기</span>
-                </a>
-                <div class="img">
-                    <img src="img/t3.png" alt="">
-                </div>
-            </div>
-        </div>
-    </article>
-
-
-
-
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-    <script>
-
-    </script>
+    
 </body>
-
 </html>
