--- a/test.html
+++ b/test.html
@@ -30,9 +30,75 @@
                        hap += i;
                    }
                }
-               document.write(i);
+               //document.write(hap); 12
            }
            func();
+       }
+
+       { // 8  번
+           function func(data ,exp){
+               let result = 1;
+               for( i=0; i<exp; i++){
+                   result = result * data;
+               }
+               //document.write(result); //32
+           }
+           func(2,5);
+       }
+
+       {
+            function func(){
+                let a = [2,3,2,4,5,6,7,2,3,3,2];
+                let value = 0;
+                for( i =0; i <=a.length; i++ ){
+                    if( a[i] ==2 ){
+                        value++;
+                    }
+                }
+                //document.write(value); // 4
+            }
+            func();
+       }
+
+       {
+           function func(){
+               let i = 0, sum= 0;
+               while( 1 ){
+                   i++;
+                   if( i > 10 )break;
+                   if( i % 5 == 0)continue;
+                   sum += i;
+                  // document.write(i);
+               }
+              // document.write(sum);
+           }
+           func();
+       }
+
+       {
+           function func(s){
+               let answer = "";
+               for( let x of s){
+                   if( x == 'w') answer += "#";
+                   else answer += x;
+               }
+               return answer;
+           }
+           let str = "webstoryboy";
+         //  document.write(func(str));
+       }
+
+       {
+           function func(s, t){
+               let answer = 0;
+               for( let x of s ){
+                   if( x == t ) answer++;
+               }
+               return answer;
+           }
+
+           let str = "webstoryboy";
+           document.write(func(str, 'y'));
        }
     </script>
 </body>
