--- a/test.html
+++ b/test.html
@@ -25,12 +25,12 @@
            function func(){
                let i = 10, hap= 0;
                while(i > 1){
-                   i--;
                    if( i % 3 == 1 ){
                        hap += i;
                    }
+                   i--;
                }
-               //document.write(hap); 12
+               document.write(hap); 12
            }
            func();
        }
@@ -98,7 +98,32 @@
            }
 
            let str = "webstoryboy";
-           document.write(func(str, 'y'));
+          // document.write(func(str, 'y'));
+       }
+
+       {
+           function func(){
+               let i, j = 0;
+               for( i =0; i<8; i++){
+                   j += i;
+               }
+              // document.write(i, "<br>");
+              // document.write(j);
+           }
+           func();
+       }
+
+       {
+           function func(){
+               let i = 10, j = 10, k =60;
+               i /= j;
+               j -= i;
+               k %= j;
+               document.write(i);
+               document.write(j);
+               document.write(k);
+           }
+           func();
        }
     </script>
 </body>
