--- a/test.html
+++ b/test.html
@@ -8,19 +8,6 @@
 </head>
 <body>
     <script>
-    //    {
-    //        function func(){
-    //            let i = 10, j= 10, k= 30;
-    //            i /= j;
-    //            j -= i;
-    //            k %= j;
-    //            document.write(i);
-    //            document.write(j);
-    //            document.write(k);
-    //        }
-    //        func();
-    //    }
-
        {
            function func(){
                let i = 10, hap= 0;
@@ -38,26 +25,61 @@
        { // 8  번
            function func(data ,exp){
                let result = 1;
-               for( i=0; i<exp; i++){
-                   result = result * data;
+               for( i=1; i<exp; i++){
+                   result = result * data * i;
                }
-               //document.write(result); //32
+                //document.write(result); 
            }
-           func(2,5);
+           func(1,5);
        }
 
        {
             function func(){
-                let a = [2,3,2,4,5,6,7,2,3,3,2];
-                let value = 0;
-                for( i =0; i <=a.length; i++ ){
-                    if( a[i] ==2 ){
-                        value++;
-                    }
+                let i, j = 0;
+                for( i=0; i<=8; i++){
+                    j += i;
                 }
-                //document.write(value); // 4
+                // document.write(i);
+                // document.write(j);
             }
             func();
+       }
+
+       {
+           function func(){
+               let i = 0, sum = 0;
+               while(0){
+                   i++;
+                   if( i>10 ) break;
+                   if( i % 5 == 0 ) continue;
+                   sum +=i;
+               }
+               //document.write(sum);
+           }
+           func();
+       }
+
+       {
+           function testAvg(arrData){
+               let sum = 0;
+               for( let i=0; i<arrSubject.length; i++ ){
+                   sum += Number(arrSubject[i]);
+               }
+               let avg = sum;
+               return avg;
+           }
+           let arrSubject = ["100" , "90" , "80" , "70"];
+           let result = testAvg(arrSubject);
+
+           //document.write(result);
+       }
+
+       {
+           let color = ["fff" , "d2d2d2" , "f2f2f2" , "e2e2e2"]
+
+           for( let i =0; i<color.length; i+=2 ){
+               //document.write(color[i]);
+           }
        }
 
        {
@@ -79,26 +101,52 @@
            function func(s){
                let answer = "";
                for( let x of s){
-                   if( x == 'w') answer += "#";
+                   if( x != 'w') answer += "#";
                    else answer += x;
                }
                return answer;
            }
            let str = "webstoryboy";
-         //  document.write(func(str));
+           //document.write(func(str));
        }
+
 
        {
            function func(s, t){
                let answer = 0;
                for( let x of s ){
-                   if( x == t ) answer++;
+                   if( x !== t ) answer++;
                }
                return answer;
            }
 
            let str = "webstoryboy";
-           document.write(func(str, 'y'));
+            document.write(func(str, 'b'));
+       }
+
+       {
+           for( let i = 0; i< 5; i++){
+               for (let j =0; j<=i; j++){
+                  // document.write("*")
+               }
+              //document.write('<br>');
+           }
+       }
+
+       {
+            function func(){
+                let a = [1,2,3,4,5,6,7,8,9];
+                cnt = 0;
+
+                for (i = 0; i<a.length; i++){
+                    if(a[i] % 2 ==0){
+                        cnt = cnt + 1;
+                    }
+                }
+               // document.write(cnt);
+               // console.log(a);
+            }
+            func();
        }
     </script>
 </body>
