--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -123,7 +123,7 @@
                 <tr>
                     <td class="center" rowspan="5">Attributes</td>
                     <td>.attr()</td>
-                    <td>-</td>
+                    <td>setAttribute()<br>getAttribute()</td>
                     <td>-</td>
                 </tr>
                 <tr>
@@ -220,12 +220,12 @@
                 </tr>
                 <tr>
                     <td>$(window).width()</td>
-                    <td>window.innerWidth()</td>
+                    <td>window.innerWidth</td>
                     <td>문서의 가로값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
                     <td>$(window).height()</td>
-                    <td>window.innerHeight()</td>
+                    <td>window.innerHeight</td>
                     <td>문서의 세로값을 가져오거나 설정합니다.</td>
                 </tr>
                 <tr>
