--- a/refer-effect/parallaxEffect/jqueryPE06.html
+++ b/refer-effect/parallaxEffect/jqueryPE06.html
@@ -346,96 +346,55 @@
 .paraNav li.active a {
     border-radius: 30px;
 }
-
-/* 한번에 나타나기 */
-/* .content-item {
-    opacity: 0;
-    transform : translateY(100px);
-    transition: all 1s;
-}
-.content-item.show {
-    transform : translateY(0);
-    opacity: 1;
-} */
-
-
-/* 개별적으로 나타나기 */
-.content-item .num {
-    opacity: 0 !important;
-    transform: translateY(200px);
-    transition:  all 1s 0.1s cubic-bezier(0, 0.66 , 0.38, 1.01);
-}
-.content-item .title {
-    opacity : 0;
-    transform: translateX(-100px);
-    transition:  all 1s 0.3s cubic-bezier(0, 0.66 , 0.38, 1.01);
-}
-.content-item .img-Wrap {
-    opacity: 0;
-    transform: translateY(200px) rotate(30deg);
-    transition:  all 1s 0.6s cubic-bezier(0, 0.66 , 0.38, 1.01);
-}
-.content-item .desc {
-    opacity: 0;
-    transform: translateX(-200px);
-    transition:  all 1s 0.9s cubic-bezier(0, 0.66 , 0.38, 1.01);
-}
-.content-item.show .num {
-    opacity: 0.07 !important;
-    transform: translateY(0);
-}
-.content-item.show .title {
-    opacity : 1;
-    transform: translateX(0);
-}
-.content-item.show .img-Wrap {
-    opacity: 1;
-    transform: translateY(0) rotate(0);
-}
-.content-item.show .desc {
-    opacity: 1;
-    transform: translateX(0);
-}
 </code></pre>
                         </div>
                         <div>
-                            <pre><code class="language-javascript">// 화면 이동
-        $(".paraNav ul li").click(function(e){
-            e.preventDefault();
-            let target = $(this);
-            let index = target.index();
-            let section = $(".content-item").eq(index);
-            let offset = section.offset().top;
-            $("html, body").animate({ scrollTop : offset }, 600);
-        });
+                            <pre><code class="language-javascript">$(window).scroll(function(){
+    let scrollTop = $(window).scrollTop();
+    //offset은 변하지 않음
+    // let offset1 = scrollTop - $("#section1").offset().top;
+    // let offset2 = scrollTop - $("#section2").offset().top;
+    // let offset3 = scrollTop - $("#section3").offset().top;
+    // let offset4 = scrollTop - $("#section4").offset().top;
+    // let offset5 = scrollTop - $("#section5").offset().top;
+    // let offset6 = scrollTop - $("#section6").offset().top;
+    // let offset7 = scrollTop - $("#section7").offset().top;
+    // let offset8 = scrollTop - $("#section8").offset().top;
+    // let offset9 = scrollTop - $("#section9").offset().top;
+        
+
+    // $("#section1").css({transform : "translateX("+ offset1 + "px)"});
+    // $("#section2").css({transform : "translateX("+ offset2 + "px)"});
+    // $("#section3").css({transform : "translateX("+ offset3 + "px)"});
+    // $("#section4").css({transform : "translateX("+ offset4 + "px)"});
+    // $("#section5").css({transform : "translateX("+ offset5 + "px)"});
+    // $("#section6").css({transform : "translateX("+ offset6 + "px)"});
+    // $("#section7").css({transform : "translateX("+ offset7 + "px)"});
+    // $("#section8").css({transform : "translateX("+ offset8 + "px)"});
+    // $("#section9").css({transform : "translateX("+ offset9 + "px)"});
+
+    // for(i = 1; i&lt;10; i++){
+    //     let offset = scrollTop - $("#section" + i).offset().top;
+    //     $("#section" + i + " .desc").css({transform : "translateX("+ offset + "px)"});
+    // }
+
+    //each
+    $(".content-item").each(function(index){
+        let offset1 = (scrollTop - $(this).offset().top) * 0.1;
+        let offset2 = (scrollTop - $(this).offset().top) * 0.2;
+
+        $(this).find(".img").css({transform : "translateY("+ offset2 + "px)"});
+        $(this).find(".desc").css({transform : "translateY("+ offset1 + "px)"});
+
+        if( scrollTop &gt; $(this).offset().top -2){
+            $(".paraNav ul li").eq(index).addClass("active").siblings().removeClass("active");
+        }
+    })
 
 
-        $(window).scroll(function(){
-            let scrollTop = $(window).scrollTop() + $(window).height()/2;
-
-            // if( scrollTop >= $("#section1").offset().top ){
-            //     $("#section1").addClass("show");
-            // }      //1번부터 9번까지
-
-            
-            // for(let i = 1; i&lt;=9; i++){
-            //     if( scrollTop>= $("#section" + i).offset().top ){
-            //         $("#section" + i).addClass("show");
-            //     } else {
-            //         $("#section" + i).removeClass("show");
-            //     }
-            // }
-
-            $(".content-item").each(function(index , element){
-                if( scrollTop > $(this).offset().top ){
-                    $(this).addClass("show");
-                    $(".paraNav ul li").eq(index).addClass("active").siblings().removeClass("active");
-                }
-            })
-
-            //출력
-            $(".paraScroll span").text(parseInt(scrollTop));
-        })
+    //출력
+    $(".paraScroll span").text(scrollTop); //스크롤을 내릴때 이미지를 위로올림 = 이질감 
+})
 </code></pre>
                         </div>
                     </div>
