--- a/refer-effect/parallaxEffect/jqueryPE07.html
+++ b/refer-effect/parallaxEffect/jqueryPE07.html
@@ -378,94 +378,62 @@
 }
 
 /* 한번에 나타나기 */
-/* .content-item {
-    opacity: 0;
-    transform : translateY(100px);
-    transition: all 1s;
+/* .content-item .desc {
+    opacity : 0;
+    transition : all 0.33s ease-in-out;
+    transform : translateY(100px) skewX(30deg);
 }
-.content-item.show {
-    transform : translateY(0);
-    opacity: 1;
+.content-item .desc.show {
+    opacity : 1;
+    transform: translateY(0) skewX(0);
 } */
 
-
-/* 개별적으로 나타나기 */
-.content-item .num {
-    opacity: 0 !important;
-    transform: translateY(200px);
-    transition:  all 1s 0.1s cubic-bezier(0, 0.66 , 0.38, 1.01);
-}
-.content-item .title {
+/* 한글자 */
+/* .content-item .desc span {
     opacity : 0;
-    transform: translateX(-100px);
-    transition:  all 1s 0.3s cubic-bezier(0, 0.66 , 0.38, 1.01);
+    transition : all 0.33s ease-in-out;
+    transform : translateY(100px) skewX(30deg);
 }
-.content-item .img-Wrap {
-    opacity: 0;
-    transform: translateY(200px) rotate(30deg);
-    transition:  all 1s 0.6s cubic-bezier(0, 0.66 , 0.38, 1.01);
-}
-.content-item .desc {
-    opacity: 0;
-    transform: translateX(-200px);
-    transition:  all 1s 0.9s cubic-bezier(0, 0.66 , 0.38, 1.01);
-}
-.content-item.show .num {
-    opacity: 0.07 !important;
-    transform: translateY(0);
-}
-.content-item.show .title {
+.content-item .desc span.show {
     opacity : 1;
-    transform: translateX(0);
-}
-.content-item.show .img-Wrap {
-    opacity: 1;
-    transform: translateY(0) rotate(0);
-}
-.content-item.show .desc {
-    opacity: 1;
-    transform: translateX(0);
+    transform: translateY(0) skewX(0);
+} */
+
+/* GSAP 한글자 씩 나타나기 */
+.content-item .desc span {
+    opacity: 0;
+    display: inline-block;
+    min-width: 1vw;
+    transform: translateY(100px) rotate(90deg) scale(2);
 }
 </code></pre>
                         </div>
                         <div>
-                            <pre><code class="language-javascript">// 화면 이동
-        $(".paraNav ul li").click(function(e){
-            e.preventDefault();
-            let target = $(this);
-            let index = target.index();
-            let section = $(".content-item").eq(index);
-            let offset = section.offset().top;
-            $("html, body").animate({ scrollTop : offset }, 600);
-        });
+                            <pre><code class="language-javascript"> //글씨 분할 : 여러개
+$(".content-item .desc").each(function(){
+    let text = $(this).text();
+    let split = text.split('').join("&lt;/span&gt;&lt;span aria-hidden='true'&gt;");
 
+    split = "&lt;span aria-hidden='true'&gt;" + split + "&lt;/span&gt;";
+    $(this).html(split).attr("aria-label", text);
+});
 
-        $(window).scroll(function(){
-            let scrollTop = $(window).scrollTop() + $(window).height()/2;
+// $(window).scroll(function(){
+//     if( $(window).scrollTop > $("#section1").offset().top ){
+//         $("#section1 .desc").addClass("show");
+//     } else {
+//         $("#section1 .desc").removeClass("show");
+//     }
+// })
 
-            // if( scrollTop >= $("#section1").offset().top ){
-            //     $("#section1").addClass("show");
-            // }      //1번부터 9번까지
-
-            
-            // for(let i = 1; i&lt;=9; i++){
-            //     if( scrollTop>= $("#section" + i).offset().top ){
-            //         $("#section" + i).addClass("show");
-            //     } else {
-            //         $("#section" + i).removeClass("show");
-            //     }
-            // }
-
-            $(".content-item").each(function(index , element){
-                if( scrollTop > $(this).offset().top ){
-                    $(this).addClass("show");
-                    $(".paraNav ul li").eq(index).addClass("active").siblings().removeClass("active");
-                }
-            })
-
-            //출력
-            $(".paraScroll span").text(parseInt(scrollTop));
-        })
+$(window).scroll(function(){
+    $(".content-item .desc").each(function(){
+        if( $(window).scrollTop() > $(this).offset().top - $(window).height()/3 ){
+            $(this).addClass("show");
+        } else {
+            $(this).removeClass("show");
+        }
+    })
 </code></pre>
                         </div>
                     </div>
